# Web-File-Name-Translator

./: .gitignore  README.kr.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: postbuild.js
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  ImageList.tsx  RuleManager.tsx
src/hooks/: useImageProcessor.ts
src/utils/: logger.ts  pngParser.ts  thumbnail.ts
